--- a/example/timeline.html
+++ b/example/timeline.html
@@ -1,5 +1,9 @@
 <html>
+  <style>
+    #timeline { height: 50px; }
+  </style>
   <body>
+    <button id="play">&gt;</button>
     <div id="timeline"></div>
     <script src="bundle.js"></script>
   </body>
